Android: Use Storage Access Framework for all file operations

BUG:424541
BUG:423670

(cherry-picked from 1fbe9652548e5eaf5bc195efb6bd0c0de9e131bf)

# Conflicts:
#	libs/ui/KisMainWindow.cpp